# KF-gins-ROS

./: .gitignore  README.md  kf_gins.rviz  kf_gins_node.yaml
kf_gins_node/: CMakeLists.txt  package.xml
kf_gins_node/config/: kf-gins.yaml  kf-gins.yaml.bak
kf_gins_node/config/dataset/: check_time_range.py
kf_gins_node/config/rviz/: kf_gins_visualization.rviz
kf_gins_node/kf-gins/: gi_engine.cpp  gi_engine.cpp.bak  gi_engine.h  insmech.cpp
kf_gins_node/launch/: kf_gins_launch.py
kf_gins_node/scripts/: check_imu.py  diag_kf_gins.py  ecef_to_enu_bridge.py  find_bad_imu.py  fix_cov_repub.py  imu_check.py  imu_echo.py  playback_dataset.py
kf_gins_node/src/: kf_gins_node.cpp  kf_gins_node.cpp.bak
launch/: kf_gins_launch.py
