<?xml version="1.0"?>
<package format="3">
  <name>kf_gins_node</name>
  <version>0.0.1</version>
  <description>KF-GINS ROS2 Node</description>
  <maintainer email="3306352477@qq.com">yangtoryt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
