<?xml version="1.0"?>
<package format="3">
  <name>kf_gins_node</name>
  <version>0.0.1</version>
  <description>KF-GINS ROS2 Node</description>
  <maintainer email="3306352477@qq.com">yangtoryt</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build-time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <!-- run-time dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <!-- 保留对 Eigen 的说明（Eigen 主要为头文件，build 时需要） -->
  <member_of_group>ros_core</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
